  99.	[func]*		jinmei
	Introduced a separate EDNS class to encapsulate EDNS related
	information more cleanly.  The related APIs are changed a bit,
	although it won't affect most of higher level applications.
	(Trac #311, svn r3020)

  98.	[build]		jinmei
	The ./configure script now tries to search some common include
	paths for boost header files to minimize the need for explicit
	configuration with --with-boost-include. (Trac #323, svn r3006)

  97.	[func]		jinmei
	Added a micro benchmark test for query processing of b10-auth.
	(Trac #308, svn r2982)

  96.	[bug]		jinmei
	Fixed two small issues with configure: Do not set CXXFLAGS so that
	it can be customized; Make sure --disable-static works.
	(Trac #325, r2976)

bind10-devel-20100917 released on September 17, 2010 

  95.	[doc]		jreed
	Add b10-zonemgr manual page. Update other docs to introduce
	this secondary manager. (Trac #341, svn r2951)

  95.	[bug]		jreed
	bin/xfrout and bin/zonemgr: Fixed some stderr output.
	(Trac #342, svn r2949)

  94.	[bug]		jelte
  	bin/xfrout:  Fixed a problem in xfrout where only 2 or 3 RRs
	were used per DNS message in the xfrout stream.
	(Trac #334, r2931)

  93.	[bug]		jinmei
	lib/datasrc: A DS query could crash the library (and therefore,
	e.g. the authoritative server) if some RR of the same apex name
	is stored in the hot spot cache.  (Trac #307, svn r2923)

  92.	[func]*		jelte
	libdns_python (the python wrappers for libdns++) has been renamed
	to pydnspp (Python DNS++). Programs and libraries that used
	'import libdns_python' now need to use 'import pydnspp'.
	(Trac #314, r2902)

  91.	[func]*		jinmei
	lib/cc: Use const pointers and const member functions for the API
	as much as possible for safer operations.  Basically this does not
	change the observable behavior, but some of the API were changed
	in a backward incompatible manner.  This change also involves more
	copies, but at this moment the overhead is deemed acceptable.
	(Trac #310, r2803)

  90.	[build]		jinmei