@@ -1,4 +1,9 @@
-  99.	[func]*		jinmei
+100 [bug]   zhanglikun
+	Make sure process xfrin/xfrout/zonemgr/cmdctl can be stoped 
+	properly when user enter "ctrl+c" or 'Boss shutdown' command 
+	through	bindctl. (Trac #335, svn rTBD)
+
+99.	[func]*		jinmei
 	Introduced a separate EDNS class to encapsulate EDNS related
 	information more cleanly.  The related APIs are changed a bit,
 	although it won't affect most of higher level applications.
